flask-app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: demo-app-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: ccpcontainerregistry.azurecr.io/flask-app:14
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: demo-app-flask
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: demo-app-flask
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 80
