ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: demo-app-flask
spec:
  tls:
    - hosts:
        - demo-flask.non-prod.internal-kognitiv.com
      secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          service:
            name: flask-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
