network-policy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-access-policy
  namespace: demo-app-flask
spec:
  podSelector:
    matchLabels:
      app: flask-app-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flask-app
